Update Mounting Data Lake.ipynb

--- a/Mounting Data Lake.ipynb
+++ b/Mounting Data Lake.ipynb
@@ -2112,8 +2112,7 @@
    },
    "outputs": [],
    "source": [
-    "# to verify go back to your datalake->container-> you will be able to see a folder created with your name, 
-click on the folder, you will be able to see the results.json file"
+    "# to verify go back to your datalake->container-> you will be able to see a folder created with your name, click on the folder, you will be able to see the results.json file"
    ]
   }
  ],
