--- a/Spark+SQL+Matplotlib.ipynb
+++ b/Spark+SQL+Matplotlib.ipynb
@@ -495,7 +495,7 @@
         "\n",
         "## Visualize data with Spark\n",
         "\n",
-        "A picture is proverbially worth a thousand words, and a chart is often better than a thousand rows of data. While notebooks in Azure Databricks include support for visualizing data from a dataframe or Spark SQL query, it is not designed for comprehensive charting. However, you can use Python graphics libraries like matplotlib and seaborn to create charts from data in dataframes.\n",
+        "A picture is proverbially worth a thousand words, and a chart is often better than a thousand rows of data. For visualizing data from a dataframe or Spark SQL query, it is not designed for comprehensive charting. However, you can use Python graphics libraries like matplotlib and seaborn to create charts from data in dataframes.\n",
         "\n",
         "### View results as a visualization\n",
         "\n",
